6969276: minor memory leak detected by cppcheck in agent/src/os/linux/symtab.c

Missed free call on error return

Reviewed-by: sla, sspitsyn, igerasim